kubernetes/apps/volsync-system/kopia/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kopia
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kopia.f9.casa`)
      kind: Rule
      services:
        - name: kopia
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
